css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700&display=swap');
@import url("https://use.typekit.net/xhu8ics.css");
* {
    margin: 0;
    padding: 0;
}
body {
  font-family: 'Inter', sans-serif;
  margin: 0;
  padding: 0;
  --color1: #92A8DA;
  --color2: #F7CAC9;
  --color3: #9de7d7;
  --color4: #E8E8e8;
  --colorbg: #101820;
  background-color: var(--colorbg);
  color: var(--color1);
  --font2: "bc-alphapipe";
}

body:after {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    content: "";
    background-image: url("../img/bg/snow.gif");
    opacity: 0.08;
    z-index: 0;
    pointer-events: none;
  }

a {
    text-decoration: none;
    color: var(--color1);
}


.header {
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
}
.brand {
    width: 80px;
}

.navbar-expand-lg .navbar-collapse {
    justify-content: flex-end;
    margin-right: 1%;
}

.navbar-light .navbar-nav .nav-link {
    color: var(--color4);
    text-transform: uppercase;
    font-weight: 500;
    letter-spacing: 2px;
    font-size: 14px;
    margin-left: 15px;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: var(--color4);
}

.navbar-light .navbar-toggler {
    color: var(--color4);
    border-color: transparent;
}

.navbar-nav {
    text-align: end;
}

.toggle__index {
    background-color: var(--color4) !important;
}

#top, #middle, #bottom{
    display: block;
    width: 25px;
    height: 1px;
    background-color: var(--color1);
    margin: 7px;
    transition: ease-in-out 0.5s;
}

.active {
    transition: ease-in-out 0.5s;
}

.active > #top {
    transition: ease-in-out 0.5s;
    transform: translateY(8px) rotate(45deg);
}
.active > #middle {
   transition: ease-in-out 0.5s;
   width: 0;
   opacity: 0;
}

.active > #bottom {
    transition: ease-in-out 0.5s;
    transform: translateY(-8px) rotate(-45deg);
}


.top__section {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    z-index: 1;
}

.h__bg {
    width: 100%;
    height: 100vh;
    background-image: url("../img/bg/bg.webp");
    background-size: cover;
    background-position: center;
    transform: scale(1.2);
    filter: blur(10px) brightness(60%);

}

.mainvisual__img {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 400px
}

.mainvisual__img img {
    width: 100%;
}


.mainvisual__scroll {
    position: absolute;
    bottom: 0;
    right: 50%;
    transform: translate(50%);
    z-index: 2;
    -webkit-transition: opacity .75s cubic-bezier(.25, .1, .25, 1);
    transition: opacity .75s cubic-bezier(.25, .1, .25, 1);
    -webkit-transition-delay: .25s;
    transition-delay: .25s;
  }
  
  .mainvisual__scroll span {
    display: block;
    font-size: 10px;
    color: var(--color4);
    letter-spacing: .2em;
  }
  
  .mainvisual__scroll .bar {
    width: 1px;
    height: 50px;
    background-color: transparent;
    margin: 10px auto 0;
    overflow: hidden;
  }
  
  .mainvisual__scroll .bar::before {
    content: " ";
    display: block;
    width: 1px;
    height: 50px;
    background-color: var(--color4);
    position: absolute;
    bottom: 0;
    left: 52%;
    -webkit-animation: scrollDown 1.25s cubic-bezier(.165, .84, .44, 1) 0s infinite normal;
    animation: scrollDown 1.25s cubic-bezier(.165, .84, .44, 1) 0s infinite normal;
  }
  
  @-webkit-keyframes scrollDown {
    0% {
      -webkit-transform: translate3d(0, 50px, 0);
      transform: translate3d(0, 50px, 0);
      opacity: 0
    }
  
    15%, 85% {
      opacity: 1
    }
  
    100% {
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
      opacity: 0
    }
  }
  
  @keyframes scrollDown {
    0% {
      -webkit-transform: translate3d(0, 50px, 0);
      transform: translate3d(0, 50px, 0);
      opacity: 0
    }
  
    15%, 85% {
      opacity: 1
    }
  
    100% {
      -webkit-transform: translate3d(0, 0, 0);
      transform: translate3d(0, 0, 0);
      opacity: 0
    }
  }
  


.section__title {
    padding-top: 10%;
    padding-bottom: 5%;
    margin-bottom: 5%;
    width: 100%;
    height: 50vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.title__h {
    text-align: center;
}

.title__h h1 {
    color: var(--color2);
    font-family: var(--font2);
    font-size: 3rem;
}

.services {
    margin-bottom: 10%;
}

.col {
    margin-bottom: 10%;
}

.card {
    position: relative;
    z-index: 1;
    display: flex;
    flex-direction: column;
    min-width: 0;
    word-wrap: break-word;
    background-color: transparent;
    background-clip: border-box;
    border: none;
    border-radius: .25rem;
    margin: auto;
}

.card-img-top {
    width: 110px;
    margin: auto;
    margin-bottom: 10%;
}

.card-body {
    flex: 1 1 auto;
    padding: 0;
    padding-top: 10%;
}

.card-text {
    font-weight: 300;
}

.border-top {
    border-top: 0.5px solid var(--color2)!important;
}

.footer {
    padding: 15px;
    color: var(--color3);
    letter-spacing: 2px;
    font-size: 14px;
    align-items: center;
}

.socials {
    margin-left: 5px;
    
}

.socials a {
    margin-left: 20px;
}

.social__img {
    width: 35px;
}

.mail {
    margin-right: 20px;
    font-weight: 300;
}

#email {
    cursor: pointer;
}


.exp {
    text-align: center;
}

.exp__btn {
    padding: 15px 25px;
    border: 1px solid var(--color1);
    border-radius: 50px;
    font-weight: 300;
    transition: 0.5s ease-in-out;
}

.exp__btn:hover {
    color: var(--color4);
    background-color: var(--color1);
}

